Optimisation : Replacing "new Integer()" by "Integer.valueOf()"