@@ -493,7 +493,7 @@ public boolean isCrossLinked(Group g) {
         if ((isPurine ? m.getN3() : m.getN1()) == N2) {
           if (vReturn == null)
             return true;
-          vReturn.add(new Integer(m.getLeadAtomIndex()));
+          vReturn.add(Integer.valueOf(m.getLeadAtomIndex()));
           haveCrossLinks = true;
         }
       }
